Added: Payment Invoice

--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-db_name = go_invoice
-db_user = root
-db_pass = 
+db_driver = mysql
 db_host = 127.0.0.1
 db_port = 3306
+
+db_user = root
+db_pass = 
+db_name = go_invoice
 
 api_uri = /api/v1/
 server_port = 8000
