--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
-db_name = 
-db_user = 
-db_pass = 
-db_host = 
-db_port = 
+db_driver = # mysql or pgsql
+db_host = # your db host (localhost / 127.0.0.1)
+db_port = # the port in which the db is running (5432 / 3306)
+
+db_user = # your db username
+db_pass = # your db password
+db_name =  # your db name for the app
+
 
 api_uri = /api/v1/
 server_port = 8000
 
-token_password = 
+token_password = # write a long hash key which will be used for jwt
