Working on emails

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,11 @@ api_uri = /api/v1/
 server_port = 8000
 
 token_password = # write a long hash key which will be used for jwt
+
+mail_mailer = 
+mail_host = 
+mail_port = 
+mail_username = 
+mail_password = 
+mail_encryption = 
+mail_from_address = 
