--- a/.env.example
+++ b/.env.example
@@ -12,10 +12,10 @@ server_port = 8000
 
 token_password = # write a long hash key which will be used for jwt
 
-mail_mailer = 
-mail_host = 
-mail_port = 
+mail_mailer = smtp
+mail_host = sandbox.smtp.mailtrap.io
+mail_port = 587 
 mail_username = 
 mail_password = 
-mail_encryption = 
-mail_from_address = 
+mail_encryption = tls
+mail_from_address = no-reply@goinvoicer.com
